Polished the code a bit thanks to the PMD Eclipse plugin